moved scss to page folder/moved images to page folder #7

--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -7,13 +7,13 @@ mixin card-room({src: PATHS})
         .swiper-button-next.card-room__button-next
         .swiper-wrapper
           .swiper-slide.card-room__slide
-            img(src=require('./' + PATHS[0]).default alt="фотография конматы").card-room__slider-img
+            img(src=require('./images/' + PATHS[0]).default alt="фотография конматы").card-room__slider-img
           .swiper-slide.card-room__slide
-            img(src=require('./' + PATHS[1]).default alt="фотография конматы").card-room__slider-img
+            img(src=require('./images/' + PATHS[1]).default alt="фотография конматы").card-room__slider-img
           .swiper-slide.card-room__slide
-            img(src=require('./' + PATHS[2]).default alt="фотография конматы").card-room__slider-img
+            img(src=require('./images/' + PATHS[2]).default alt="фотография конматы").card-room__slider-img
           .swiper-slide.card-room__slide
-            img(src=require('./' + PATHS[3]).default alt="фотография конматы").card-room__slider-img
+            img(src=require('./images/' + PATHS[3]).default alt="фотография конматы").card-room__slider-img
     .card-room__content
       .card-room__head
         span.card-room__number
