--- a/src/pages/cards-page/cards-page.pug
+++ b/src/pages/cards-page/cards-page.pug
@@ -39,9 +39,19 @@ block content
         .cards-page__card
           +card-checkin()
         .cards-page__card
-          +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
+          +card-room({src: [
+            'room-2.jpg',
+            'room-2.jpg',
+            'room-2.jpg',
+            'room-2.jpg'
+            ]})
         .cards-page__card
-          +card-room({src: ['room-1.jpg','room-1.jpg','room-1.jpg','room-1.jpg']})
+          +card-room({src: [
+            'room-1.jpg',
+            'room-1.jpg',
+            'room-1.jpg',
+            'room-1.jpg',
+            ]})
         
         
         
