--- a/src/pages/filter-page/filter-page.scss
+++ b/src/pages/filter-page/filter-page.scss
@@ -1,3 +1,6 @@
+@import '../../utils/utils-scss/vars.scss';
+@import '../../utils/utils-scss/mixins.scss';
+
 .filter-page {
   &__main {
     border-bottom: 1px solid rgba(31, 32, 65, 0.25);
