--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -109,7 +109,7 @@ block content
                 ]})
               .col
                 +review({
-                  src: 'maga.png',
+                  src: 'images/maga.png',
                   name: 'Мурад Сарафанов',
                   date: '5 дней назад',
                   text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. \nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.',
