fix buttons/fix calculator/fix logo/fix circle diagram #8

--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -29,7 +29,7 @@ mixin card-book()
           .card-book__calc-item
             span.card-book__calc-option
               | 9 990₽ х 4 суток
-            span.card-book__calc-sum
+            span.card-book__calc-sum.js-card-book__calc-sum
               | 39 960₽
           .card-book__calc-item
             span.card-book__calc-option
