--- a/src/components/circle-diagram/circle-diagram.pug
+++ b/src/components/circle-diagram/circle-diagram.pug
@@ -5,7 +5,8 @@ mixin circle-diagram()
         i.card-diagram__num 
           | 260 
         | голосов
-      canvas(id="CircleDiagram")
+      .circle-diagram__wrapper
+        canvas(id="CircleDiagram")
     ul.circle-diagram__list
       li.circle-diagram__list-item
         | Великолепно
