--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,12 +1,12 @@
-mixin date-dropdown({className, title, titleSecond})
+mixin date-dropdown({classNameFirstInput, classNameSecondInput, title, titleSecond})
   .date-dropdown
     label.date-dropdown__label
       span.block-title #{title}
-      input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly required).date-dropdown__input.js-date-dropdown__input
+      input(type="text" placeholder="ДД.ММ.ГГГГ" class=classNameFirstInput readonly required).date-dropdown__input
       svg.date-dropdown__arrow
         use(xlink:href="#expand-more")
     label.date-dropdown__label
       span.block-title #{titleSecond}
-      input(type="text" placeholder="ДД.ММ.ГГГГ" class=className readonly required).date-dropdown__input
+      input(type="text" placeholder="ДД.ММ.ГГГГ" class=classNameSecondInput readonly required).date-dropdown__input
       svg.date-dropdown__arrow
         use(xlink:href="#expand-more")
