--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -195,12 +195,12 @@
         transform: rotate(45deg);
         top: calc(50% - 1px);
         width: 20px;
-        left: calc(50% - 0.556rem);
+        left: 3px;
       }
       &:before {
         transform: rotate(-45deg);
         top: calc(50% - 1px);
-        left: calc(50% - 1px);
+        left: 3px;
         width: 20px;
       }
     }
