--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -57,18 +57,78 @@ block content
               h1.filter-page__rooms-title
                 | Номера, которые мы для вас подобрали
               .filter-page__rooms
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
-                +card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
+                +card-room([
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'},
+                  {src: 'room-2.jpg'}
+                  ])
               .filter-page__pagination
                 +pagination()
 
