set outline for focus/deleted global styles for some tags/deleted rem #10

--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -48,7 +48,7 @@
     transition: $trFast;
     &_active {
       transform: rotate(135deg);
-      top: calc(50% - 0.222rem);
+      top: calc(50% - 4px);
     }
   }
   &__menu {
