--- a/src/components/rate-buttons/rate-buttons.scss
+++ b/src/components/rate-buttons/rate-buttons.scss
@@ -3,6 +3,10 @@
 
   &__label {
     display: flex;
+
+    &:focus {
+      outline: 2px solid $purple;
+    }
   }
   &__input {
     display: none;
