--- a/src/components/subscription/subscription.scss
+++ b/src/components/subscription/subscription.scss
@@ -30,6 +30,7 @@
       transition: $trFast;
     }
     &:focus {
+      outline: none;
       border: $borderHover;
       &::placeholder {
         color: $ds75;
