--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -77,13 +77,13 @@ block content
               +range-slider({title: 'range slider', interval: '5000₽ - 10000₽'})
               .block-title.block-title_margin-b-16 buttons
               br
-              input(type='submit' value='click me').button
+              a(href='/mock-adress/').button click me
               br
               br 
-              button(type='submit').button.button_white click me
+              a(href='/mock-adress/').button.button_white click me
               br
               br
-              input(type='submit' value='click me').button.button_white.button_no-bg
+              a(href='/mock-adress/').button.button_no-bg click me
               br
               br
               button(type='submit').button.button_big перейти к оплате
