--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -40,7 +40,7 @@
     min-width: 100%;
     min-height: 50%;
     @media (max-width: $desktopWidth) {
-      max-height: calc(26.944rem / 2);
+      max-height: calc(485px / 2);
     }
     @media (max-width: $smDesktopWidth) {
       min-width: 50%;
