--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -31,6 +31,7 @@
     }
   }
   &__input {
+    cursor: pointer;
     font-size: 14px;
     border: $border;
     border-radius: 4px;
@@ -44,6 +45,7 @@
       padding: 10px 12px;
     }
     &:focus {
+      outline: none;
       border: $borderHover;
     }
     &:hover {
@@ -56,7 +58,7 @@
     max-height: 12px;
     position: absolute;
     right: 15px;
-    top: calc(50% + 0.222rem);
+    top: calc(50% + 4px);
     fill: $ds50;
   }
 }
