--- a/src/components/expand-list/expand-list.pug
+++ b/src/components/expand-list/expand-list.pug
@@ -1,5 +1,5 @@
 mixin expand-list({title, className})
-  .expand-list(class=className)
+  .expand-list(class=className tabindex='0')
     label.expand-list__main-label
       span.block-title.expand-list__title.js-expand-list__title #{title}
       .expand-list__dropdown.js-expand-list__dropdown
