--- a/src/components/expand-list/expand-list.scss
+++ b/src/components/expand-list/expand-list.scss
@@ -4,7 +4,11 @@
   user-select: none;
   cursor: pointer;
   $self: &;
+  &:focus {
+    outline: 2px solid $purple;
+  }
   &__title {
+    cursor: pointer;
     display: flex;
     font-size: 12px;
     justify-content: space-between;
@@ -48,6 +52,7 @@
     }
   }
   &__item {
+    cursor: pointer;
     padding-bottom: 10px;
     display: flex;
     align-items: flex-start;
