--- a/src/components/masked-textfield/masked-textfield.scss
+++ b/src/components/masked-textfield/masked-textfield.scss
@@ -26,6 +26,7 @@
       transition: $trFast;
     }
     &:focus {
+      outline: none;
       border: $borderHover;
       &::placeholder {
         color: $ds75;
