--- a/src/components/rate-buttons/rate-buttons.pug
+++ b/src/components/rate-buttons/rate-buttons.pug
@@ -1,6 +1,6 @@
 mixin rate-buttons()
   .rate-buttons.js-rate-buttons
-    label.rate-buttons__label
+    label.rate-buttons__label( tabindex="0")
       input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
@@ -8,7 +8,7 @@ mixin rate-buttons()
         svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star").rate-buttons__star
       
-    label.rate-buttons__label
+    label.rate-buttons__label( tabindex="0")
       input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
@@ -16,7 +16,7 @@ mixin rate-buttons()
         svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star").rate-buttons__star
 
-    label.rate-buttons__label
+    label.rate-buttons__label( tabindex="0")
       input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
@@ -24,7 +24,7 @@ mixin rate-buttons()
         svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star").rate-buttons__star
 
-    label.rate-buttons__label
+    label.rate-buttons__label( tabindex="0")
       input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
@@ -32,7 +32,7 @@ mixin rate-buttons()
         svg.rate-buttons__svg.rate-buttons__svg(role="image" aria-label="rate-star")
           use(xlink:href="#star").rate-buttons__star
 
-    label.rate-buttons__label
+    label.rate-buttons__label( tabindex="0")
       input(type="checkbox").rate-buttons__input.js-rate-button__input
       .rate-buttons__star
         svg.rate-buttons__svg(role="image" aria-label="rate-star")
