--- a/src/components/textField/textField.scss
+++ b/src/components/textField/textField.scss
@@ -24,6 +24,7 @@
       transition: $trFast;
     }
     &:focus {
+      outline: none;
       border: $borderHover;
       &::placeholder {
         color: $ds75;
