--- a/src/components/validate-error/validate-error.scss
+++ b/src/components/validate-error/validate-error.scss
@@ -1,5 +1,5 @@
 .validate-error {
-  font-size: 12;
+  font-size: 12px;
   color: $danger-color;
   @media (max-width: $phoneWidth) {
     font-size: 10px;
