--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -36,6 +36,7 @@ mixin header({isEntered})
             a(href="/mock-adress").header__cabinet
               | Юлий Цезарь
         .header__burger.js-header__burger(role="navigation" aria-label="menu")
+          .header__burger-layout.js-header__burger-layout  
     
     .header__nav-shadow.js-header__nav-shadow
     nav.header__nav.header__nav_dropdown.js-header__nav_dropdown
