--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -154,15 +154,20 @@
     }
   }
   &__burger {
+    min-width: 30px;
+    min-height: 30px;
+    position: relative;
     cursor: pointer;
+  }
+  &__burger-layout {
     display: none;
     width: 30px;
     height: 3px;
     background-color: $purple;
-    position: relative;
+    position: absolute;
+    top: 50%;
     z-index: 10;
     border-radius: 50px;
-    margin-left: 30px;
     &:after {
       content: '';
       display: block;
@@ -186,6 +191,7 @@
       border-radius: 50px;
     }
     &_active {
+      top: 0;
       height: 30px;
       background-color: $white;
       border: 2px solid $purple;
