--- a/src/pages/filter-page/filter-page.pug
+++ b/src/pages/filter-page/filter-page.pug
@@ -57,78 +57,150 @@ block content
               h1.filter-page__rooms-title
                 | Номера, которые мы для вас подобрали
               .filter-page__rooms
-                +card-room([
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
-                +card-room([
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
+                 +card-room([
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'},
                   {src: 'room-2.jpg'}
-                  ])
+                  ],
+                  {
+                    type: 'люкс',
+                    number: 888,
+                    priceForOneDay: '9 990',
+                    reviews: 145
+                  })
               .filter-page__pagination
                 +pagination()
 
