--- a/src/utils/utils-scss/fonts.scss
+++ b/src/utils/utils-scss/fonts.scss
@@ -6,22 +6,21 @@
 }
 
 @font-face {
-  font-family: 'MontserratBold';
+  font-family: 'Montserrat';
   src: url('./assets/fonts/montserrat/montserrat-bold.woff2'), url('./assets/fonts/montserrat/montserrat-bold.woff');
-  font-weight: 600;
+  font-weight: $bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'OpenSans';
   src: url('./assets/fonts/open-sans/open-sans-regular.woff2'), url('./assets/fonts/open-sans/open-sans-regular.woff');
-  // font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'OpenSansBold';
+  font-family: 'OpenSans';
   src: url('./assets/fonts/open-sans/open-sans-bold.woff2'), url('./assets/fonts/open-sans/open-sans-bold.woff');
-  font-weight: 600;
+  font-weight: $bold;
   font-style: normal;
 }
